fix problem with horizontal scroll appearing when unnecessary

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,7 +34,6 @@ $root: rgb(40,85,162);
 $lighter: #5F5C92;
 $lightest: #9391AE;
 $highlight: #BABAC3;
-$page-content: rgb(243,245,249);
 $side-bar: rgb(24,46,107);
 
 
@@ -42,11 +41,6 @@ $side-bar: rgb(24,46,107);
 body {
 	background-color: $root;
 	overflow: scroll;
-}
-
-.page-content {
-	background-color: $page-content;
-	padding: 15px;
 }
 
 .spinner {
@@ -65,4 +59,6 @@ body {
 .logo {
 	width: 220px;
 	position: absolute;
+	left: -210px;
+	top: 10px;
 }
